--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "app": "node app.js"
+    "app": "node app.js",
+    "operator": "node temas/CompOperator.js",
+    "strings": "node temas/Strings.js"
+
 
   },
   "keywords": [],
